# ton-miner

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  builder.sh  env-hive-os.sh  poetry.toml  pyproject.toml  run.sh  setup.cfg
app/: README.md  builder.sh  config.py  main.py  miner.py  model.py  package.py  sender.py  setup.py  util.py  utils.py
app/libs/: config.py  models.py  runner.py  sender.py  utils.py
config/hiveos/: h-config.sh  h-manifest.conf  h-run.sh  h-stats.sh
docs/: hiveos-chinese.md  hiveos-eng.md  ubuntu-chinese.md  ubuntu-eng.md  window-chinese.md  window-eng.md
miner/: device.py  init.py  miner.py  model.py  monitor.py  run-bin.sh  run-py.sh  test_model.py
miner/data/: miner.json
scripts/: builder.sh  package.sh  run.ps1  run.sh
src/app/: config.py  miner.py  model.py  package.py  run-bin.sh  run-py.sh  sender.py  setup.py
src/app/data/: miner.json
src/tests/: test_config.py  test_model.py
src/tests/data/: minercmd.json
tests/: test_model.py  test_package.py  test_utils.py
tests/data/: miner.boc
