[tool.poetry]
name = "ton-miner"
version = "0.1.0"
description = ""
authors = ["qwedsazxc78 <qwedsazxc78@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"
pydantic = "^1.9.0"
requests = "^2.26.0"
pyopencl = "^2021.2.11"
pylama = "^8.3.7"
autopep8 = "^1.6.0"

[tool.poetry.dev-dependencies]
safety = "1.10.3"
bandit = "1.7.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
