[tool.poetry]
name = "ton-miner"
version = "0.1.0"
description = ""
authors = ["qwedsazxc78 <qwedsazxc78@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1,<3.11"
loguru = "^0.5.3"
pydantic = "^1.9.0"
requests = "^2.26.0"
pyopencl = "^2021.2.11"

[tool.poetry.dev-dependencies]
autoflake = "1.4"
autopep8 = "1.5.6"
bandit = "1.7.0"
coverage = "5.0.0"
isort = "5.0.0"
pre-commit = "2.11.1"
pylama = "7.7.1"
pylint = "2.8.2"
pytest = "6.1.2"
pytest-asyncio = "0.14.0"
pytest-xdist = "2.1.0"
pytest-cov = "2.10.0"
safety = "1.10.3"
pyinstaller = "^4.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
